@@ -645,6 +645,20 @@ ppp0           6000kbit         500kbit</programlisting>
               that means that we want to use the source IP address
               <emphasis>before SNAT</emphasis> as the key.</para>
             </listitem>
+
+            <listitem>
+              <para>pfifo - When specified for a leaf class, the pfifo queing
+              discipline is applied to the class rather than the sfq queuing
+              discipline.</para>
+            </listitem>
+
+            <listitem>
+              <para>limit=<emphasis>number</emphasis> - Added in Shorewall
+              4.4.3. When specified for a leaf class, specifies the maximum
+              number of packets that may be queued within the class. The
+              <emphasis>number</emphasis> must be &gt; 2 and less than 128. If
+              not specified, the value 127 is assumed</para>
+            </listitem>
           </itemizedlist>
         </listitem>
       </itemizedlist>
