@@ -407,6 +407,28 @@
                 <emphasis>before NAT</emphasis> as the key.</para>
               </listitem>
             </varlistentry>
+
+            <varlistentry>
+              <term>pfifo</term>
+
+              <listitem>
+                <para>When specified for a leaf class, the pfifo queing
+                discipline is applied to the class rather than the sfq queuing
+                discipline.</para>
+              </listitem>
+            </varlistentry>
+
+            <varlistentry>
+              <term>limit=<emphasis>number</emphasis></term>
+
+              <listitem>
+                <para>Added in Shorewall 4.4.3. When specified for a leaf
+                class, specifies the maximum number of packets that may be
+                queued within the class. The <emphasis>number</emphasis> must
+                be &gt; 2 and less than 128. If not specified, the value 127
+                is assumed. </para>
+              </listitem>
+            </varlistentry>
           </variablelist>
         </listitem>
       </varlistentry>
