@@ -28,6 +28,8 @@ Changes in Shorewall 4.4.3
 
 14)  Fix optional interfaces.
 
+15)  Add 'limit' option to tcclasses.
+
 Changes in Shorewall 4.4.2
 
 1)  BUGFIX: Correct detection of Persistent SNAT support
